images path updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div class="header-section">
-        <img src="banner1.jpg" alt="" class="background" />
+        <img src="images/banner1.jpg" alt="" class="background" />
         <div class="top-head navbar-fixed-top-scrolled">
           <h2 id="logo"><i class="fas fa-paw"></i>Dogs Care</h2>
           <div class="hamburger-btn">
@@ -60,7 +60,7 @@
       </div>
       <div class="about-section" id="about">
         <div class="about-container">
-          <div class="about-img"><img src="about.jpg" alt="" /></div>
+          <div class="about-img"><img src="images/about.jpg" alt="" /></div>
           <div class="about-text">
             <span class="text-lg text-semi-bold"> About Us </span>
             <span class="text-sm">
@@ -100,7 +100,7 @@
           </div>
           <div class="services-showcase">
             <div class="service-box">
-              <img src="img1.jpg" alt="" />
+              <img src="images/img1.jpg" alt="" />
               <div class="service-box-text">
                 <span class="text-semi-bold text-md">
                   Donec sed teus enime
@@ -115,7 +115,7 @@
               </div>
             </div>
             <div class="service-box">
-              <img src="img2.jpg" alt="" />
+              <img src="images/img2.jpg" alt="" />
               <div class="service-box-text">
                 <span class="text-semi-bold text-md">
                   Donec sed teus enime
@@ -130,7 +130,7 @@
               </div>
             </div>
             <div class="service-box">
-              <img src="img3.jpg" alt="" />
+              <img src="images/img3.jpg" alt="" />
               <div class="service-box-text">
                 <span class="text-semi-bold text-md">
                   Donec sed teus enime
@@ -150,7 +150,7 @@
       <div class="dog-actions-section">
         <div class="actions-container">
           <div class="dog-img">
-            <img src="dog2.png" alt="" />
+            <img src="images/dog2.png" alt="" />
           </div>
           <div class="actions-showcase">
             <div class="column1">
@@ -213,7 +213,7 @@
           </div>
           <div class="services-showcase news-showcase">
             <div class="service-box news-box">
-              <img src="about.jpg" alt="" />
+              <img src="images/about.jpg" alt="" />
               <div class="service-box-text news-box-text">
                 <span class="text-sm upload-date"> July 18, 2021 </span>
                 <span class="text-semi-bold text-md">
@@ -229,7 +229,7 @@
               </div>
             </div>
             <div class="service-box news-box">
-              <img src="blog2.jpg" alt="" />
+              <img src="images/blog2.jpg" alt="" />
               <div class="service-box-text news-box-text">
                 <span class="text-sm upload-date"> July 18, 2021 </span>
                 <span class="text-semi-bold text-md">
@@ -245,7 +245,7 @@
               </div>
             </div>
             <div class="service-box news-box">
-              <img src="blog3.jpg" alt="" />
+              <img src="images/blog3.jpg" alt="" />
               <div class="service-box-text news-box-text">
                 <span class="text-sm upload-date"> July 18, 2021 </span>
                 <span class="text-semi-bold text-md">
