--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="header-section">
         <img src="images/banner1.jpg" alt="" class="background" />
-        <div class="top-head navbar-fixed-top-scrolled">
+        <div class="top-head">
           <h2 id="logo"><i class="fas fa-paw"></i>Dogs Care</h2>
           <div class="hamburger-btn">
             <div class="line"></div>
@@ -320,7 +320,7 @@
           <span class="socials">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-linkedin-in"></i>
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twittergit "></i>
             <i class="fab fa-google-plus-g"></i>
             <i class="fab fa-github-alt"></i>
           </span>
